#7446: fold the vacancy walk into Bound to keep the change under the size limit
The first attempt added a Vacancy class, which put the diff over the repo's
200-line pull request limit. The chain walk now lives in Bound itself, and
Filled reuses Bound's answer instead of repeating the placement logic, so the
one lookup is shared rather than duplicated.

Provided.slot(type, place) becomes vacant(type, taken, place), taking the
locators of the voids that are no longer empty, which removes the need for a
separate index lookup.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01BW7sVWnb57VW2CpgEJoN2H